# galactus

./: .gitignore  Cargo.toml  LICENSE  README.md
galactus-core/: Cargo.toml
galactus-core/src/: lib.rs  session.rs  snowflake.rs
galactus-core/src/config/: config_entry.rs  config_entry_store.rs  mod.rs
galactus-ingester/: Cargo.toml
galactus-registry/: Cargo.toml  build.rs
galactus-registry/proto/: config.proto  subscription.proto
galactus-registry/src/: main.rs
galactus-search/: Cargo.toml
scripts/: migrations.cql
