[package]
name = "galactus-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
cdrs-tokio = "6.2.0"
chrono = "0.4"
uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
