[package]
authors = ["Kyle Thompson"]
description = "A collection of protobuf types that can be used with `galactus`."
edition = "2021"
license = "MIT"
name = "galactus-registry"
version = "0.1.0"

[dependencies]
async_once = "0.2.6"
cdrs-tokio = "6.2.0"
galactus-core = { path = "../galactus-core"}
lazy_static = "1.4.0"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.7"

[build-dependencies]
tonic-build = "0.7"